--- a/default.properties
+++ b/default.properties
@@ -1,9 +1,9 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_SCHEMA=api_test
-USERNAME=username
-PASSWORD=password
-ORACLE_DB_HOST=10.0.0.21
+USERNAME=marioo
+PASSWORD=1234
+ORACLE_DB_HOST=192.168.1.27
 ORACLE_DB_PORT=1521
-ORACLE_USERNAME=username
-ORACLE_PASSWORD=password
+ORACLE_USERNAME=C##1DAMBALLESTEROS
+ORACLE_PASSWORD=10678713
